--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 reqwest = { version = "0.12", features = ["json"] }
 dotenv = "0.15.0"
+actix-cors = "0.7.0"
